# portfolio3

./: .eleventy.cjs  .env.example  .netlify-trigger  AGENTS.md  README.md  index.html  netlify.toml  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js
.github/workflows/: clipforge-release.yml  cuedeck-release.yml  electron-mapstencil-release.yml  operator-ledger-release.yml  repo-pilot-release.yml
_includes/layouts/: base.njk  (+2 more)
about/: _redirects  index.html  netlify.toml  sitemap.xml
apps/: Helix.html  Magma.html  String.html  Tectonic.html  Transit.html  Vortex.html  do-not-press.html  index.html
capabilities/: 404.html  index.html  lab-core.css  manifest.webmanifest  runtime-guard.js  tour_logic.js
contact/: index.html  package.json
functions/: server.js
home/: BACKEND_NOTES.md  README_BACKEND.md  _check.js  index.html  index_legacy.html  manifest.webmanifest  site-manifest.json  ui-helpers.js
member/: continuation_notes.md  todo_later_notes.md
pages/: index.vue
public/: _redirects  app.js  index.html  styles.css
renderer/: index.html  renderer.js  styles.css
scripts/: netlify-ignore.sh
server/: index.js
sql/: 001_draft_relay.sql  001_flowlens.sql  001_hallmap.sql  001_init.sql  001_island_index.sql  001_relayroom.sql  001_streamlit.sql  002_cardpress.sql  002_driftmeter.sql  002_pocket_dossier.sql  003_claimscope.sql  003_signal_kitchen.sql  003_signalgrid.sql
src/: App.svelte  main.ts  server.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
utilities/: _headers  index.html  runtime-guard.js
(+1060 files in other folders)
