[package]
name = "clipforge"
version = "0.1.0"
description = "Clipboard pipeline toolkit"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["clipboard", "global-shortcut", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1.10"
sha2 = "0.10"

[features]
custom-protocol = ["tauri/custom-protocol"]
